@@ -1,4 +1,5 @@
 0.07
+ - Update examples/ dir.
 
 0.06 2021-01-14T19:16:36+01:00
  - Add Lexeme.
